--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,10 +19,11 @@ jobs:
         uses: actions/checkout@v3
  
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::947247140022:role/GithubS3
+          aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::947247140022:role/S3GithubReadOnly
           role-session-name: OIDCSession
  
-      - run: aws s3 sts get-caller-identity
+      - run: aws sts get-caller-identity
         shell: bash
